--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,43 @@
     --color3:#FDF0BB;
     --color4:#B5E1AD;
     --color5:#B9F2E0;
+    --color6:#dcfad7;
+
+}
+*{
+    box-sizing: border-box;
 }
 
 body{
-    background-color: black;
+    background-color: var(--color4);
+    height:100vh;
+    display:flex;
+    flex-direction: column;
+    margin:0;
+    padding:0;
+    
+}
+header{
+    width:100%;
+    height:10%;
+    background-color: var(color4);
+}
+#main{
+    height:90%;
+    display:flex;
+    gap:10px;
+    padding:20px;
+    
+}
+#sidebar{
+    width:20%; 
+}
+#content{
+    width:80%;
+}
+#sidebar,#content{
+    background-color: var(--color6);
+    border-radius:30px;
+    height:100%;
+    
 }
