change cursor on btns from task list

--- a/src/style.css
+++ b/src/style.css
@@ -159,6 +159,9 @@ header{
 .arrow-down-icon:hover,#arrow-up-icon:hover{
     cursor:pointer;
 }
+.delete-btn:hover,.edit-btn:hover,.complete-btn:hover{
+    cursor:pointer;
+}
 .task-description{
     height:fit-content;
     padding:5px 5px 5px 20px;
