--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@ header{
     display:flex;
     gap:10px;
     padding:20px;
+    overflow: hidden;
     
 }
 #sidebar{
@@ -37,12 +38,14 @@ header{
     width:300px;
     display:flex;
     flex-direction: column;
+    overflow-y: auto;
 }
 #content{
    flex:1;
    display:flex;
    flex-direction: column;
    padding:20px;
+   overflow-y: auto;
 }
 #sidebar,#content{
     background-color: var(--color6);
@@ -50,7 +53,7 @@ header{
     height:100%;
     padding:10px;   
 }
-#summary{
+.sb-header{
     text-align: center;
     padding:0;
     margin-top:20px;
@@ -68,6 +71,9 @@ header{
     padding-left:10px;
     gap:10px;
 }
+.sb-element:hover{
+    cursor: pointer;
+}
 #create-todo{
    position:absolute;
    background-image: url(/src/img/add-icon.svg);
@@ -81,7 +87,7 @@ header{
    border:1px solid white;
    border-radius:10px;
 }
-#create-todo:hover, #create-task-btn:hover{
+#create-todo:hover, #create-task-btn:hover,#create-project-btn:hover{
     background-color:#fa8c5d;
     cursor: pointer;
 }
