--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,20 @@
 :root{
     --color1:#F9B597;
     --color2:#F1C598;
-    --color3:#FDF0BB;
-    --color4:#B5E1AD;
-    --color5:#B9F2E0;
-    --color6:#dcfad7;
+    --headers-color:#413b2f;
+    --background-color:#978d79;
+    --section-color:#B8D8BE;
+    --elements-color:#978d79;
+    --task-div-color:#839c88;
 
 }
 *{
     box-sizing: border-box;
+    font-family: 'Playpen Sans', cursive;
 }
 
 body{
-    background-color: var(--color4);
+    background-color: var(--background-color);
     height:100vh;
     display:flex;
     flex-direction: column;
@@ -23,7 +25,6 @@ body{
 header{
     width:100%;
     height:10%;
-    background-color: var(color4);
 }
 #main{
     height:90%;
@@ -31,6 +32,7 @@ header{
     gap:10px;
     padding:20px;
     overflow: hidden;
+    color:white;
     
 }
 #sidebar{
@@ -44,8 +46,8 @@ header{
     overflow-y: auto;
     position:relative;
 }
-#sb-header{
-    position:fixed;
+.sb-header{
+    color:var(--headers-color);
     
 }
 #content{
@@ -56,7 +58,7 @@ header{
    overflow-y: auto;
 }
 #sidebar,#content{
-    background-color: var(--color6);
+    background-color: var(--section-color);
     border-radius:30px;
     height:100%;
     padding:10px;   
@@ -71,7 +73,7 @@ header{
 .sb-element{
     width:100%;
     height:30px;
-    background-color:white;
+    background-color:var(--elements-color);
     border-radius: 10px;
     margin-top:15px;
     display:flex;
@@ -81,6 +83,7 @@ header{
 }
 .sb-element:hover{
     cursor: pointer;
+    background-color:var(--task-div-color);
 }
 #create-todo{
    position:absolute;
@@ -96,19 +99,34 @@ header{
    border-radius:10px;
    z-index: 1;
 }
+#new-task-btn,#new-project-btn{
+    width:200px;
+    height:30px;
+    font-size: large;
+    align-self: center;
+    border-radius:10px;
+    border:1px solid white;
+    background-color: var(--background-color);
+    color:white;
+}
+#new-task-btn:hover,#new-project-btn:hover{
+    cursor: pointer;
+    background-color:var(--task-div-color);
+}
+
 #create-todo:hover, #create-task-btn:hover,#create-project-btn:hover{
     background-color:#fa8c5d;
     cursor: pointer;
 }
-#create-todo:active, #create-task-btn:active{
-    background-color: #B5E1AD;
+#create-todo:active, #create-task-btn:active, #create-project-btn:active{
+    background-color: var(--section-color);
 }
 #task-form,#project-form{
     display:flex;
     flex-direction: column;
     width:200px;
     height:fit-content;
-    background-color: var(--color3);
+    background-color: var(--background-color);
     padding:10px;
     align-self: center;
     margin-top:50px;
@@ -144,10 +162,12 @@ header{
     align-items: center;
     height: 50px;
     width:100%;
-    background-color: var(--color5);
+    background-color: var(--task-div-color);
     border-radius:10px;
     margin-top:10px;
     padding:20px;
+    border:1px solid white;
+    
     
 }
 
@@ -156,6 +176,7 @@ header{
 }
 .show-priority{
     display:flex;
+    align-items: center;
     gap:5px;
 }
 .priority-color{
@@ -181,6 +202,7 @@ header{
     height:fit-content;
     padding:5px 5px 5px 20px;
     margin:0;
+    color:var(--headers-color);
 }
 .task-description p{
     margin:0;
@@ -190,4 +212,26 @@ header{
     display:flex;
     justify-content: space-between;
 }
+.content-header{
+    display:flex;
+    align-items: center;
+    height:fit-content;
+    gap:20px;
+    margin:0;
+    padding:20px;
+    color:var(--headers-color);
+}
+.content-header h2{
+    flex:1;
+    margin:0;
+    padding:0;
+
+}
+.content-header p{
+    margin:0;
+}
+#content{
+    padding:20px;
+}
+
 
