--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,30 @@ body{
 header{
     width:100%;
     height:10%;
+    display:flex;
+    padding:0 50px;
+    align-items: center;
+    margin-top:10px;
+  
 }
+#main-icon{
+    height: 100%;
+}
+header h1{
+    color:white;
+    margin:0 0 0 10px;
+    padding:0
+}
+header a{
+    height:100%;
+    margin-right:20px;
+    margin-left:auto;
+}
+#gitlogo{
+    height:100%;   
+}
+
+
 #main{
     height:90%;
     display:flex;
